Fix in combined fragment widget. On removal of a combined fragment, remove all its dashed lines, as well.

BUG:337630
FIXED-IN:2.15.0 (KDE 14.12.0)